welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value caseorange
while (2 * biscuits != caseorange + 1)
                       ^